# tracking-antenna

./: CMakeLists.txt  README.md
src/: WebSocketProtocol.cpp  WebSocketServer.cpp  main.cpp
src/scripts/: Ascent.py  Direction.py  Motor.py  PhonyMotor.py  PhonySignal.py  Signal.py  main.py  requirements.txt  start.sh
src/scripts/antenna/: ant_main.py  server.py
src/scripts/mission-control/: mc_basic.py  mc_main.py
test/: tests.cpp
